# snakemake-storage-plugin-irods

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release-please.yml
docs/: intro.md
snakemake_storage_plugin_irods/: __init__.py
tests/: tests.py
