[tool.poetry]
name = "snakemake-storage-plugin-irods"
version = "0.1.0"
description = ""
authors = [
    "Oliver Stolpe <oliver.stolpe@bihealth.org>",
    "Johannes Koester <johannes.koester@uni-due.de>"
]
readme = "README.md"
repository = "https://github.com/snakemake/snakemake-storage-plugin-irods"
documentation = "https://snakemake.github.io/snakemake-plugin-catalog/plugins/storage/irods.html"

[tool.poetry.dependencies]
python = "^3.11"
snakemake-interface-common = "^1.15.0"
snakemake-interface-storage-plugins = "^3.0.0"
python-irodsclient = "^1.1.9"

[tool.poetry.group.dev.dependencies]
black = "^23.12.0"
flake8 = "^6.1.0"
coverage = "^7.3.2"
pytest = "^7.4.3"
snakemake = {git="https://github.com/snakemake/snakemake.git"}

[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"